@@ -24,16 +24,16 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
-    implementation ('org.apache.commons:commons-dbcp2:2.12.0') {
+    implementation ('org.apache.commons:commons-dbcp2:2.13.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'commons-net:commons-net:3.11.0'
+    implementation 'commons-net:commons-net:3.11.1'
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.22.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.14'
+    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.6.0.24.10'
+    implementation 'org.springframework:spring-jdbc:6.1.15'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
