@@ -1,3 +1,6 @@
+Jan 03, 2025
+  fixed parser to handle some unexpected data
+
 Nov 18, 2024
   parser change: 'Transfected with:' was changed to 'Genetic integration:'
   added handling of xrefs: Sigma_Aldrich, Abeomics, RIKEN_BRC_EPD, Genomeditech, Hysigen
